--- a/app/views/styles/main.css
+++ b/app/views/styles/main.css
@@ -4,14 +4,23 @@
 	font-family: monospace;
 	font-weight: lighter;
 	color:  #333333;
+	font-size: 30pt;
+}
+
+
+.header h1 {
+	/*padding: 20px;*/
+	margin-bottom:  10pt;
+	font-size:  40pt;
 }
 
 .header, .info, .vote {
-	width:  450px;
-	padding:  20px;
-	border:  1px dashed black;
-	padding: 20px;
-	margin:  30px;
+	width:  75%;
+	max-width:  800px;
+	border:  5px dashed black;
+	border-radius: 20px;
+	padding: 20pt;
+	margin:  20pt;
 }
 
 .error {
@@ -22,33 +31,21 @@
 	background-color: #e1ffde;
 }
 
-.header h1 {
-	/*padding: 20px;*/
-	margin-bottom:  10px;
-	font-size:  25px;
-}
-
-.header h3 {
-	margin-bottom:  10px;
-	font-size:  20px;
-}
-
 .info h3 span{
 	background-color: black;
 	color: white;
-	font-size: 20px;
-	padding: 4px;
-	padding-left:  6px;
-	padding-right:  6px;
-	border-radius: 6px;
+	padding: 4pt;
+	padding-left:  6pt;
+	padding-right:  6pt;
+	border-radius: 6pt;
 }
 
 .info h3 {
-	margin-bottom: 10px;
+	margin-top: 5pt;
+	margin-bottom: 20pt;
 }
 
 .info p, .vote p{
-	font-size:  20px;
 	margin-bottom: 10px;
 }
 
@@ -65,7 +62,7 @@ span#seePhoto {
 }
 
 .yo {
-	color: red;
+	color: #d40202 !important;;
 	font-weight:  bold;
 }
 
@@ -74,11 +71,16 @@ span#seePhoto {
 	font-weight:  bold;
 }
 
+.failMessage {
+	color:  #d40202 !important;
+	font-weight:  bold;
+}
+
 input {
-	font-size:  20px;
 	width:  100%;
-	padding: 5px;
-	margin-bottom: 8px;
+	height:  50pt;
+	padding: 5pt;
+	margin-bottom: 15pt;
 	border:  1px solid black;
 	border-radius: 5px;
 }
@@ -87,6 +89,7 @@ input[type=submit] {
 	width:  50%;
 	padding: 5px;
 	margin-bottom: 4px;
+	background-color:  #e0e0e0;
 }
 
 input:disabled {
